--- a/app/assets/stylesheets/includes/assistance.scss
+++ b/app/assets/stylesheets/includes/assistance.scss
@@ -5,7 +5,7 @@
 #assistance.dropdown-menu
 {
     width:300px;
-    padding: 0.75rem;
+    padding: 0.35rem 0.75rem 0.75rem;
 
     p, textarea, input, img
     {
