--- a/app/assets/stylesheets/includes/sidebar.scss
+++ b/app/assets/stylesheets/includes/sidebar.scss
@@ -5,7 +5,7 @@
     font-size: 0.9rem;
     overflow-y: scroll;
 
-    padding:0.75rem;
+    padding:1rem;
 }
 
 #scheduleDropdown
@@ -15,6 +15,17 @@
 
 .nav-head
 {
+    .dropdown
+    {
+        min-width: 0;
+        flex: 1 1 auto;
+        
+        button
+        {
+            text-align: start;
+        }
+    }
+    
     .dropdown-menu
     {
         max-width: 100%;
@@ -43,6 +54,7 @@
         left: 0;
         bottom: 0;
         max-width: 100%;
+        border-right: 1px solid;
 
         visibility: hidden;
         transform: translateX(-100%);
@@ -68,13 +80,6 @@
 
 @media (min-width: 992px)
 {
-    #sidebar
-    {
-        border-right: 1px solid;
-        // prevents backdrop-filter blocking out text when scrolling
-        transform: translate3d(0,0,0);
-    }
-
     #sidebar > .nav
     {
         padding-left:.75rem;
@@ -92,8 +97,6 @@
 {
     #sidebar
     {
-        padding:1rem;
-
         #schedule
         {
             margin-top:0.5rem;
@@ -138,22 +141,18 @@
 #sidebar .nav-text, .materials-nav .nav-text
 {
     font-size: smaller;
-    margin: 0.5rem 0 0.25rem 0.15rem;
+    margin: 0.5rem 0 0.45rem 0rem;
     color: map-get($theme-colors, 'dark');
+    font-weight: bold;
 }
 
 #sidebar .nav-head, .materials-nav .nav-head
 {
-    padding-left: 0.15rem;
-    padding-right: 0.15rem;
     text-transform: uppercase;
-    letter-spacing: 1.5px;
     font-size: 14px;
-}
+    font-weight: bold;
 
-#sidebar .nav-head, .materials-nav .nav-head
-{
-    margin:0.15rem 0 0.15rem 0;
+    margin:0.15rem 0 0.5rem 0;
     color:#a5a5a5;
 }
 
@@ -166,12 +165,19 @@
     width: fit-content;
     max-width: 100%;
     align-items: start !important;
+    gap: 0.15rem;
+}
+
+#sidebar .form-check-input
+{
+    vertical-align: middle;
+    margin-top: 0.35rem;
 }
 
 #sidebar .nav-link, .materials-nav .nav-link
 {
     display: inline-block;
-    padding: 0.25rem 0.25rem;
+    padding: 0.25rem 0.5rem;
     flex: 1 1 auto !important; // fill
     border-radius: 0.25rem !important;
 
