--- a/app/views/page/questions.html.erb
+++ b/app/views/page/questions.html.erb
@@ -1,6 +1,6 @@
 <turbo-frame id="questions_page_<%= @page.id %>">
     <section class="questions" style="">
-        <div class="disambiguation card-group d-none d-md-flex">
+        <div class="disambiguation card-group d-none d-md-flex gap-2">
             <div class="card bg-primary rounded-4 border-0 text-white p-3">
                 <%= bootstrap_icon 'people-fill', width: '40', height: '40' %>
                 Als je nog niet zo goed weet hoe je je vraag moet stellen dan 
