--- a/app/views/application/_schedule_dropdown.html.erb
+++ b/app/views/application/_schedule_dropdown.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.admin? || current_schedule.schedule_spans.accessible.many? %>
 
 <div class="dropdown">
-	<button id="scheduleDropdown" class="btn btn-link nav-head text-dark m-0 p-0 dropdown-toggle <%= 'unavailable' if !current_module.public? %>" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+	<button id="scheduleDropdown" class="btn btn-link nav-head text-dark m-0 p-0 dropdown-toggle <%= 'unavailable' if !current_module.accessible? %>" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 		<%= current_module.name %>
 	</button>
 
@@ -15,7 +15,7 @@
 			<% end %>
 			<%= button_to mod.name, profile_set_module_path(module: mod.id), 
 				method: :post, remote: true,
-				class: "w-100 dropdown-item #{'unavailable' if !mod.public?}",
+				class: "w-100 dropdown-item #{'unavailable' if !mod.accessible?}",
 				form: { data: {'turbo-frame': 'sidebar-frame'}, class: 'w-100' } %>
 		</li>
 		<% end %>
