--- a/app/assets/stylesheets/includes/overview.scss
+++ b/app/assets/stylesheets/includes/overview.scss
@@ -112,7 +112,13 @@ span.bubble {
 	font-size: 12px;
 	padding: 0.25rem;
 	border: none;
+    border-radius: 0;
 	height:100%;
+    
+    &.late
+    {
+        border-bottom: 2px dotted black;
+    }
 }
 
 .grade-button.btn-light, #grade-table td.bg-light
@@ -137,64 +143,4 @@ span.bubble {
 {
 	color: var(--bs-dark) !important;
 	background-color: #a2e8c2 !important;
-}
-
-#submit-content
-{
-	// ensure that the box covers the "click to scroll down" submit button
-	position: relative;
-	z-index: 1040;
-	min-height:10rem;
-	width: 100%;
-
-//    background-color: #cce7f7;
-	color: #005182;
-
-	table
-	{
-		border: hidden
-	}
-
-	hr
-	{
-		margin-left:0; margin-right:0;
-	}
-}
-
-#submit-button
-{
-	@extend .shadow-lg;
-
-	z-index:1000;
-	position:fixed;
-	bottom:0;
-	right:0;
-
-	margin-bottom:1.5rem;
-	margin-right:1.5rem;
-
-	border-radius: 1.5rem;
-
-	button
-	{
-		max-width:10rem;
-		border-radius:1rem;
-	}
-}
-
-#submit-form
-{
-	border:none;
-	border-top: 1px solid white;
-	border-bottom: 1px solid white;
-	border-radius:0;
-	padding: 0.5rem;
-
-	margin-top:2rem;
-	margin-bottom:2rem;
-
-	h6:first-child
-	{
-		margin-top:0 !important;
-	}
 }
