--- a/app/assets/stylesheets/includes/print.scss
+++ b/app/assets/stylesheets/includes/print.scss
@@ -11,9 +11,9 @@
 		background-color:transparent ! important;
 	}
 	
-	#sidebar, footer, ul.nav, #content > h1, iframe,
+	#sidebar, #navbar, footer, ul.nav, #content > h1, iframe,
 	#schedule-column, #comments-column, .embed,
-	section#submit-content, #float-nav, .alert, #submit-button
+	section#submit-content, #float-nav, .alert
 	{
 		display:none !important;
 	}
