--- a/app/views/layouts/overviews.html.erb
+++ b/app/views/layouts/overviews.html.erb
@@ -1,6 +1,4 @@
-<% content_for :content do %>
-<div class="container-fluid pt-3">
-	<%= yield %>
-</div>
-<% end %>
+<%# content_for :content do %>
+<%#= yield %>
+<%# end %>
 <%= render template: "layouts/navbar" %>
