--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,7 @@ $enable-cssgrid: true;
 @import "includes/courselinks";
 @import "includes/page";
 @import "includes/content";
-@import "includes/elements";
+
 @import "includes/timeline";
 @import "includes/modal";
 @import "includes/grading";
@@ -52,6 +52,8 @@ $enable-cssgrid: true;
 @import "includes/miniapp";
 @import "includes/assistance";
 @import "includes/questions";
+@import "includes/submit";
+@import "includes/overview";
 
 @import "includes/theme";
 @import "includes/fonts";
