limit menu heights

--- a/app/assets/stylesheets/includes/modal.scss
+++ b/app/assets/stylesheets/includes/modal.scss
@@ -113,3 +113,9 @@
 	-webkit-backdrop-filter: brightness(102%);
 	backdrop-filter: brightness(102%);
 }
+
+#user-toolbar .dropdown-menu
+{
+    max-height: 30rem;
+    overflow-y: scroll;
+}
