--- a/app/views/users/_toolbar.html.erb
+++ b/app/views/users/_toolbar.html.erb
@@ -1,4 +1,4 @@
-<div class="ms-auto align-items-center d-inline-flex">
+<div id="user-toolbar" class="ms-auto align-items-center d-inline-flex">
 	<%= link_to bootstrap_icon('envelope', width: 20), "https://secure.helpscout.net/search/?query=#{@student.mail}", target:"_new", class: 'px-2', style: 'display:inline-flex;' %>
 	<% if @student.alarm %>
 	<%= button_to [@student, user: {alarm: :false}], method: :patch, class: "btn btn-link text-danger p-0 px-2", style: 'display:inline-flex;', form: { class: 'd-inline-flex' } do %>
