--- a/app/assets/stylesheets/includes/modal.scss
+++ b/app/assets/stylesheets/includes/modal.scss
@@ -69,12 +69,11 @@
 
 @media (max-width: 767.98px)
 {
-	.btn-close
+	#modal-browser-header .btn-close
 	{
 		display: block;
 	}
 }
-
 
 #modal-browser-body
 {
