--- a/app/views/grading/_file_panels.html.erb
+++ b/app/views/grading/_file_panels.html.erb
@@ -1,17 +1,19 @@
-<% @files.each do |filename, contents| %>
-<div class="tab-pane <%= (first = false) || 'show active' if first %>" id="show-file-<%= filename.parameterize %>" role="tabpanel" aria-labelledby="home-tab">
-	<%= present_file_contents(filename, contents) %>
-</div>
-<% end %>
+<% cache @submit do %>
+    <% @files.each do |filename, contents| %>
+    <div class="tab-pane <%= (first = false) || 'show active' if first %>" id="show-file-<%= filename.parameterize %>" role="tabpanel" aria-labelledby="home-tab">
+        <%= present_file_contents(filename, contents) %>
+    </div>
+    <% end %>
 
-<% if @submit.has_auto_feedback? %>
-<div class="tab-pane <%= (first = false) || 'show active' if first %>" id="file-check" role="tabpanel" aria-labelledby="home-tab">
-	<code><pre><%= @submit.formatted_auto_feedback %></code></pre>
-</div>
-<% end %>
+    <% if @submit.has_auto_feedback? %>
+    <div class="tab-pane <%= (first = false) || 'show active' if first %>" id="file-check" role="tabpanel" aria-labelledby="home-tab">
+        <code><pre><%= @submit.formatted_auto_feedback %></code></pre>
+    </div>
+    <% end %>
 
-<% if @submit.has_run_log? %>
-<div class="tab-pane <%= (first = false) || 'show active' if first %>" id="file-log" role="tabpanel" aria-labelledby="home-tab">
-	<code><pre><%= @submit.formatted_run_log %></code></pre>
-</div>
+    <% if @submit.has_run_log? %>
+    <div class="tab-pane <%= (first = false) || 'show active' if first %>" id="file-log" role="tabpanel" aria-labelledby="home-tab">
+        <code><pre><%= @submit.formatted_run_log %></code></pre>
+    </div>
+    <% end %>
 <% end %>
