--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -26,12 +26,14 @@
 </div>
 <% end %>
 
+<% cache @page do %>
 <% @subpages.each_with_index do |subpage, index| %>
 <div id="content">
     <section class="markdown" id="<%= subpage.slug %>-content">
         <%= markdown(subpage.content, @page) %>
     </section>
 </div>
+<% end %>
 <% end %>
 
 <%= render 'submit' %>
