--- a/app/assets/stylesheets/includes/navbar.scss
+++ b/app/assets/stylesheets/includes/navbar.scss
@@ -1,6 +1,7 @@
 #navbar
 {
     padding: 0.25rem 1rem;
+    height: 4rem;
 }
 
 .navbar-brand
@@ -19,7 +20,7 @@
 
 #course-name
 {
-    font-weight:bold;
+    font-size: 1.4rem;
     line-height:1.1;
 }
 
