--- a/app/views/application/_brand.html.erb
+++ b/app/views/application/_brand.html.erb
@@ -1,10 +1,10 @@
 <%# min-width:0 is to allow the div to dictate the width for flexboxed children %>
-<a href="/" class="navbar-brand d-flex align-items-center p-1 ms-n1 me-auto fw-bold sflex-fill  <%= 'logged_in' if logged_in? %>" style="min-width:0;">
+<a href="/" class="navbar-brand d-flex align-items-center p-1 ms-n1 me-auto <%= 'logged_in' if logged_in? %>" style="min-width:0;">
 
     <%= bootstrap_icon "terminal", class: "rounded me-2 flex-shrink-0 d-none d-md-block", width:32, height:32, style: 'vertical-align:bottom;' %>
 
-    <div id="course-title" class="d-flex flex-column">
-        <span><%= Course.long_name %></span>
+    <div id="course-title" class="d-flex flex-column dissplay-6">
+        <span id="course-name"><%= Course.long_name %></span>
 
         <% if logged_in? %>
         <small class="fw-normal fs-6">
