--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,8 +1,8 @@
-<div id="navbar" class="shadow-sm navbar navbar-expand-md flex-wrap column-gap-3">
+<div id="navbar" class="shadow-sm navbar navbar-expand-md flex-wrap column-gap-3 justify-items-start">
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
         <span class="navbar-toggler-icon"></span>
     </button>
-    
+
     <%= render 'brand' %>
 
     <%# additional items as defined by the page template %>
