--- a/app/views/assistance/index.html.erb
+++ b/app/views/assistance/index.html.erb
@@ -1,9 +1,14 @@
 <% @body_class = "mini-app" %>
 <meta name="theme-color" content="#F4F9FF">
 
+<div id="sidebar" class="offcanvas offcanvas-bottom" tabindex="-1" data-bs-backdrop="false"  data-turbo-permanent>
+    <%= render 'sidebar' %>
+</div>
+
 <div class="mini-app-container">
         <div class="mini-app-header">
-            <%= bootstrap_icon 'chat-text', width: '40', height: '40', style: 'color: #88C0FF' %>
+        <%= link_to bootstrap_icon('chat-text', width: '40', height: '40', style: 'color: #88C0FF'), '',
+            { 'data-bs-toggle' => "offcanvas", 'data-bs-target' => "#sidebar" } %>
             <h1 class="display-4">Assistentie</h1>
             <h3 class="fw-normal"><%= @course_name %></h3>
         </div>
