--- a/app/views/layouts/sidebar.html.erb
+++ b/app/views/layouts/sidebar.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'navbar' %>
 
-<div id="sidebar" tabindex="-1" onclick="x = new bootstrap.Offcanvas('#sidebar'); x.hide();">
+<div id="sidebar" class="offcanvas offcanvas-bottom" tabindex="-1" data-bs-backdrop="false" data-turbo-permanent>
     <%= render 'sidebar' %>
 </div>
 
