--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -64,7 +64,7 @@
 
 <% end%>
 
-<% if !logged_in? %>
+<% if !authenticated? %>
 <% if Auth::OpenController.available? %>
 <%= menu_link "#{t('account.login_button')} via UvA", auth_open_login_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
 <% end %>
