form styles in content

--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -153,6 +153,11 @@ section, .sectionbody .content
 		border-top:1px solid #eee;
 	}
 
+    input, textarea
+    {
+        @extend .form-control;
+    }
+
 	textarea
 	{
 		margin-bottom:1rem;
