--- a/app/views/page/_submit.html.erb
+++ b/app/views/page/_submit.html.erb
@@ -4,8 +4,7 @@
     <% unless @subpages.any? %>
     <h1>Submit</h1>
     <% end %>
-    <% if @submit.present? %>
-    <% if @submit.submitted_at # student did actually submit herself %>
+    <% if @submit&.submitted_at # student did actually submit herself %>
     <p><%= bootstrap_icon 'check2-all' %> <strong><%= t 'submit.you_submitted_ago', time: time_ago_in_words(@submit.submitted_at) %></strong></p>
     <% end %>
 
